# libbitcoin-node

./: .gitignore  build.cmd  configure.ac  install-cmake.sh  install-cmakepresets.sh  install.sh
.github/workflows/: ci.yml
builds/cmake/: CMakeLists.txt  bitcoin-node-config.cmake.in
builds/cmake-v2/: CMakeLists.txt  bitcoin-node-config.cmake.in
